--- a/index.html
+++ b/index.html
@@ -3,16 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Carl Dunne | Developer Dunne</title>
-    <link rel="stylesheet" href="<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">">
-    <link rel="stylesheet" href="<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css" integrity="sha384-BY+fdrpOd3gfeRvTSMT+VUZmA728cfF9Z2G42xpaRkUGu2i3DyzpTURDo5A6CaLK" crossorigin="anonymous">">
 </head>
 <body>
     <header>
-
+        <div class="row">
+            <a class="col-md-4 logo" href="index.html"></a>
+            <div class="col-md-8">
+                <div class="row bg-color-name-title">
+                    <div class="col heading">
+                        <h1 class="name">Carl Dunne</h1>
+                        <h2 class="title"> Full Stack Developer</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <section>
-
+        
     </section>
     <footer>
         
