--- a/index.html
+++ b/index.html
@@ -43,7 +43,62 @@
         </div>
     </header>
     <section class="container-fluid">
-        <div class="row row-table">
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">Personal Info</h3>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Name:
+                        </p>
+                        <div class="value">
+                            <p>
+                                Carl Dunne
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Address:
+                        </p>
+                        <div class="value">
+                            <p>
+                                Put address here.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Phone Number:
+                        </p>
+                        <div class="value">
+                            <p>
+                                087 125 654
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Email:
+                        </p>
+                        <div class="value">
+                            <p>
+                                Carl.m.dunne@hotmail.com
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
