Added informaion to resume.html and added styles

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
             <div class="col-md-4 bg-color-personal-info section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">Personal Info</h3>
+                        <h3 class="section-heading uppercase">
+                            Personal Info
+                        </h3>
                     </div>
                 </div>
                 <div class="personal-info-item">
@@ -55,11 +57,11 @@
                         <p class="uppercase">
                             Name:
                         </p>
-                        <div class="value">
-                            <p>
-                                Carl Dunne
-                            </p>
-                        </div>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Carl Dunne
+                        </p>
                     </div>
                 </div>
                 <div class="personal-info-item">
@@ -67,23 +69,23 @@
                         <p class="uppercase">
                             Address:
                         </p>
-                        <div class="value">
-                            <p>
-                                Put address here.
-                            </p>
-                        </div>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Gweedore baby
+                        </p>
                     </div>
                 </div>
                 <div class="personal-info-item">
                     <div class="key">
                         <p class="uppercase">
-                            Phone Number:
+                            Phone:
                         </p>
-                        <div class="value">
-                            <p>
-                                087 125 654
-                            </p>
-                        </div>
+                    </div>
+                    <div class="value">
+                        <p>
+                            555 204 1973
+                        </p>
                     </div>
                 </div>
                 <div class="personal-info-item">
@@ -91,11 +93,11 @@
                         <p class="uppercase">
                             Email:
                         </p>
-                        <div class="value">
-                            <p>
-                                Carl.m.dunne@hotmail.com
-                            </p>
-                        </div>
+                    </div>
+                    <div class="value">
+                        <p>
+                            DeveloperDunne@gmail.com
+                        </p>
                     </div>
                 </div>
             </div>
